--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,6 +12,7 @@
     "com.unity.purchasing": "2.0.6",
     "com.unity.render-pipelines.lightweight": "5.13.0",
     "com.unity.rendering.hybrid": "0.0.1-preview.11",
+    "com.unity.shadergraph": "5.13.0",
     "com.unity.textmeshpro": "2.0.0",
     "com.unity.timeline": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
