--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.collections": "0.0.9-preview.18",
     "com.unity.entities": "0.0.12-preview.31",
     "com.unity.mathematics": "1.0.1",
+    "com.unity.multiplayer-hlapi": "1.0.2",
     "com.unity.package-manager-ui": "2.1.2",
     "com.unity.physics": "0.0.2-preview.1",
     "com.unity.postprocessing": "2.1.7",
@@ -16,6 +17,7 @@
     "com.unity.shadergraph": "5.13.0",
     "com.unity.textmeshpro": "2.0.0",
     "com.unity.timeline": "1.0.0",
+    "com.unity.xr.legacyinputhelpers": "2.0.2",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
